Increase Surefires forked VM's PermGen
This is in sync with brain-service and fixes local failures of brain-
functionat-test due to PermGen.  Hopefully it'll fix CI failures too.

CLM-1404 CLM-1642